--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       .dark {
         color: #fafafa;
         background-color: #444;
+        border-radius: 25px;
       }
       .step {
         padding-bottom: 50vh;
